multi-tenant/tenant-foo/request-auth.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: request-keycloak-auth
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  jwtRules:
  - issuer: "http://10.238.154.207:31716/realms/istio"
    jwksUri: "http://10.238.154.207:31716/realms/istio/protocol/openid-connect/certs"
