multi-tenant/tenant-foo/httpbin-gateway-oauth-keycloak.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin-gateway
  namespace: foo
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "oauth.demo.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: foo
  name: httpbin-vsvc
spec:
  hosts:
  - "oauth.demo.com"
  gateways:
  - httpbin-gateway
  http:
  - match:
    - uri:
        prefix: /oauth2
    route:
    - destination:
        host: oauth2-proxy.foo.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /headers
    route:
    - destination:
        host: httpbin.foo.svc.cluster.local
        port:
          number: 8000     
  - route:
    - destination:
        host: httpbin.foo.svc.cluster.local
        port:
          number: 8000
